--- a/DevCom/DevCom/Web.config
+++ b/DevCom/DevCom/Web.config
@@ -61,8 +61,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    
-  <add name="DevCom_DBEntities" connectionString="metadata=res://*/Models.DBAccessModel.csdl|res://*/Models.DBAccessModel.ssdl|res://*/Models.DBAccessModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3OH66KF\SQLEXPRESS;initial catalog=DevCom_DB;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DevCom_DBEntities" connectionString="metadata=res://*/Models.DBAccessModel.csdl|res://*/Models.DBAccessModel.ssdl|res://*/Models.DBAccessModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3OH66KF\SQLEXPRESS;initial catalog=DevCom_DB;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
