--- a/DevCom/DevCom/DevCom.csproj
+++ b/DevCom/DevCom/DevCom.csproj
@@ -286,6 +286,7 @@
     <Content Include="Scripts\jquery-3.6.3.slim.min.map" />
     <Content Include="Scripts\jquery-3.6.3.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.filedrop.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -323,6 +324,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Assets\Audios\" />
+    <Folder Include="Assets\Files\" />
+    <Folder Include="Assets\Images\" />
+    <Folder Include="Assets\Videos\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
