--- a/DevCom/DevCom/Web.config
+++ b/DevCom/DevCom/Web.config
@@ -16,7 +16,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" maxRequestLength="512000" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
