--- a/DevCom/DevCom/packages.config
+++ b/DevCom/DevCom/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="jQuery" version="3.6.3" targetFramework="net48" />
+  <package id="jQuery.filedrop" version="1.0.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
